--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,17 +5,19 @@ edition = "2021"
 
 [dependencies]
 # display
-embedded-graphics-framebuf = "0.5"
 gc9a01-rs = { version = "0.1" }
 embedded-graphics = { version = "0.8" }
 tinybmp = { version = "0.5" }
-cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
-cortex-m-rt = "0.7.0"
+tinygif = "0.4"
+
+embedded-alloc = "0.5"
+
 
 defmt = "0.3"
 defmt-rtt = "0.3"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 
+cortex-m-rt = "0.7.0"
 embassy-executor = { branch = "main", git = "https://github.com/embassy-rs/embassy", features = [
     "defmt",
     "integrated-timers",
@@ -36,6 +38,7 @@ embassy-rp = { branch = "main", git = "https://github.com/embassy-rs/embassy", f
     "nightly",
     "unstable-pac",
     "time-driver",
+    "critical-section-impl",
 ] }
 
 # cargo build/run
